Bug 441303 - jsutil.cpp does not compile with Visual Studio 2003. r=crowder